--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" type="image/png" href="https://github.com/Chris-Hesterman/Dad-Humor/blob/gh-pages/favicon.ico?raw=true">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
     <title>Dad Jokes</title>
   </head>
